src/scanner.c
/* Generated by re2c 0.13.7.5 on Mon Jul 13 14:31:40 2015 */
#line 1 "src/scanner.re"
#include <stdlib.h>
#include <string.h>
#include "parser.h"
#include "syms.h"

#define YYCTYPE         char
#define YYCURSOR        cursor
#define YYMARKER	marker
#define YYLIMIT         (cursor+len)
#define YYFILL(n)
#define SYM(t)		*cursor_ptr = cursor;\
			/* TODO FIX THIS */ return (struct sym*)&syms[t];
#define NEW_SYM(t)	*cursor_ptr = cursor;\
			struct sym *a = malloc(sizeof(struct sym));\
			a->type=t;\
			a->str=strndup(old, YYCURSOR - old);\
			return a;

struct sym *scan(char **cursor_ptr, size_t len)
{
	char *marker = 0;
	char *cursor = *cursor_ptr;
	char *old = cursor;


#line 29 "<stdout>"
		{
			YYCTYPE yych;
			unsigned int yyaccept = 0;

			if ((YYLIMIT - YYCURSOR) < 11) YYFILL(11);
			yych = *YYCURSOR;
			switch (yych) {
			case 0x00:	goto yy91;
			case '\t':
			case ' ':	goto yy86;
			case '!':	goto yy48;
			case '"':	goto yy85;
			case '\'':	goto yy72;
			case '(':	goto yy59;
			case ')':	goto yy61;
			case '*':	goto yy36;
			case '+':	goto yy32;
			case ',':	goto yy83;
			case '-':	goto yy34;
			case '.':	goto yy71;
			case '/':	goto yy38;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy89;
			case ':':	goto yy49;
			case '<':	goto yy50;
			case '=':	goto yy46;
			case '>':	goto yy51;
			case '@':	goto yy42;
			case 'A':	goto yy53;
			case 'B':
			case 'F':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'M':
			case 'U':
			case 'V':
			case 'W':
			case 'Y':
			case 'j':
			case 'w':
			case 'y':	goto yy88;
			case 'C':	goto yy75;
			case 'D':	goto yy7;
			case 'E':	goto yy54;
			case 'G':	goto yy12;
			case 'L':	goto yy16;
			case 'N':	goto yy76;
			case 'O':	goto yy20;
			case 'P':	goto yy22;
			case 'Q':	goto yy77;
			case 'R':	goto yy78;
			case 'S':	goto yy25;
			case 'T':	goto yy27;
			case 'X':	goto yy30;
			case 'Z':	goto yy79;
			case '[':	goto yy63;
			case '\\':	goto yy40;
			case ']':	goto yy65;
			case '^':	goto yy44;
			case '_':	goto yy55;
			case 'a':	goto yy2;
			case 'b':	goto yy4;
			case 'c':	goto yy5;
			case 'd':	goto yy6;
			case 'e':	goto yy8;
			case 'f':	goto yy80;
			case 'g':	goto yy10;
			case 'h':	goto yy82;
			case 'i':	goto yy13;
			case 'k':	goto yy14;
			case 'l':	goto yy15;
			case 'm':	goto yy17;
			case 'n':	goto yy18;
			case 'o':	goto yy19;
			case 'p':	goto yy21;
			case 'q':	goto yy74;
			case 'r':	goto yy23;
			case 's':	goto yy24;
			case 't':	goto yy26;
			case 'u':	goto yy28;
			case 'v':	goto yy9;
			case 'x':	goto yy29;
			case 'z':	goto yy31;
			case '{':	goto yy67;
			case '|':	goto yy57;
			case '}':	goto yy69;
			case '~':	goto yy52;
			default:	goto yy93;
			}
yy2:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case 'l':	goto yy636;
			case 'n':	goto yy637;
			default:	goto yy99;
			}
yy3:
#line 230 "src/scanner.re"
			{ NEW_SYM(IDENTIFIER) }
#line 139 "<stdout>"
yy4:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy629;
			case 'e':	goto yy630;
			default:	goto yy99;
			}
yy5:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'd':	goto yy611;
			case 'h':	goto yy612;
			case 'o':	goto yy613;
			case 's':	goto yy614;
			default:	goto yy99;
			}
yy6:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy568;
			case 'd':	goto yy569;
			case 'e':	goto yy570;
			case 'i':	goto yy571;
			case 'o':	goto yy572;
			case 't':	goto yy573;
			case 'x':	goto yy575;
			case 'y':	goto yy577;
			case 'z':	goto yy579;
			default:	goto yy99;
			}
yy7:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'e':	goto yy563;
			default:	goto yy99;
			}
yy8:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'p':	goto yy556;
			case 't':	goto yy557;
			default:	goto yy99;
			}
yy9:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy522;
			case 'd':	goto yy523;
			case 'e':	goto yy524;
			case 'v':	goto yy525;
			default:	goto yy99;
			}
yy10:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'b':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 's':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy98;
			case 'a':	goto yy503;
			case 'c':	goto yy504;
			case 'l':	goto yy505;
			case 'r':	goto yy506;
			case 't':	goto yy507;
			default:	goto yy11;
			}
yy11:
#line 177 "src/scanner.re"
			{ SYM(SYM_g) }
#line 252 "<stdout>"
yy12:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy498;
			default:	goto yy99;
			}
yy13:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'f':	goto yy488;
			case 'n':	goto yy490;
			case 'o':	goto yy492;
			default:	goto yy99;
			}
yy14:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy483;
			default:	goto yy99;
			}
yy15:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':	goto yy449;
			case 'a':	goto yy450;
			case 'c':	goto yy451;
			case 'i':	goto yy452;
			case 'n':	goto yy453;
			case 'o':	goto yy455;
			case 't':	goto yy456;
			case 'u':	goto yy458;
			default:	goto yy99;
			}
yy16:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy437;
			case 'i':	goto yy438;
			default:	goto yy99;
			}
yy17:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy426;
			case 'i':	goto yy427;
			case 'o':	goto yy428;
			case 'u':	goto yy429;
			default:	goto yy99;
			}
yy18:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'n':	goto yy417;
			case 'o':	goto yy419;
			case 'u':	goto yy420;
			default:	goto yy99;
			}
yy19:
			yych = *++YYCURSOR;
			switch (yych) {
			case '+':	goto yy408;
			case '.':	goto yy406;
			case 'i':	goto yy398;
			case 'm':	goto yy399;
			case 'o':	goto yy400;
			case 'r':	goto yy402;
			case 'x':	goto yy404;
			default:	goto yy99;
			}
yy20:
			yych = *++YYCURSOR;
			switch (yych) {
			case '/':	goto yy392;
			case 'm':	goto yy391;
			default:	goto yy99;
			}
yy21:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'h':	goto yy377;
			case 'i':	goto yy378;
			case 'r':	goto yy380;
			case 's':	goto yy381;
			default:	goto yy99;
			}
yy22:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'h':	goto yy369;
			case 'i':	goto yy370;
			case 's':	goto yy372;
			default:	goto yy99;
			}
yy23:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':	goto yy354;
			case 'a':	goto yy355;
			case 'h':	goto yy356;
			case 'o':	goto yy357;
			default:	goto yy99;
			}
yy24:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'e':	goto yy307;
			case 'i':	goto yy308;
			case 'q':	goto yy309;
			case 't':	goto yy310;
			case 'u':	goto yy311;
			default:	goto yy99;
			}
yy25:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'i':	goto yy302;
			default:	goto yy99;
			}
yy26:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy281;
			case 'e':	goto yy282;
			case 'h':	goto yy283;
			case 'i':	goto yy284;
			default:	goto yy99;
			}
yy27:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'T':	goto yy274;
			case 'h':	goto yy276;
			default:	goto yy99;
			}
yy28:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy257;
			case 'l':	goto yy258;
			case 'p':	goto yy260;
			case 'u':	goto yy261;
			default:	goto yy99;
			}
yy29:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'i':	goto yy253;
			case 'x':	goto yy255;
			default:	goto yy99;
			}
yy30:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'i':	goto yy251;
			default:	goto yy99;
			}
yy31:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'e':	goto yy247;
			default:	goto yy99;
			}
yy32:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '-':	goto yy245;
			default:	goto yy33;
			}
yy33:
#line 66 "src/scanner.re"
			{ SYM(SYM_plus) }
#line 424 "<stdout>"
yy34:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case ':':	goto yy237;
			case '<':	goto yy234;
			case '=':	goto yy232;
			case '>':	goto yy230;
			case 'l':	goto yy236;
			default:	goto yy35;
			}
yy35:
#line 67 "src/scanner.re"
			{ SYM(SYM_minus) }
#line 439 "<stdout>"
yy36:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '*':	goto yy226;
			default:	goto yy37;
			}
yy37:
#line 68 "src/scanner.re"
			{ SYM(SYM_cdot) }
#line 449 "<stdout>"
yy38:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '/':	goto yy222;
			case '_':	goto yy220;
			default:	goto yy39;
			}
yy39:
#line 224 "src/scanner.re"
			{ SYM(SYM_fracdiv) }
#line 460 "<stdout>"
yy40:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case ' ':	goto yy216;
			case '\\':	goto yy218;
			default:	goto yy41;
			}
yy41:
#line 233 "src/scanner.re"
			{ SYM(SYM_EOL) }
#line 471 "<stdout>"
yy42:
			++YYCURSOR;
#line 77 "src/scanner.re"
			{ SYM(SYM_circ) }
#line 476 "<stdout>"
yy44:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '^':	goto yy212;
			default:	goto yy45;
			}
yy45:
#line 226 "src/scanner.re"
			{ SYM(SYM_sup) }
#line 486 "<stdout>"
yy46:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '>':	goto yy210;
			default:	goto yy47;
			}
yy47:
#line 91 "src/scanner.re"
			{ SYM(SYM_eq) }
#line 496 "<stdout>"
yy48:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case '=':	goto yy206;
			case 'i':	goto yy205;
			default:	goto yy41;
			}
yy49:
			yych = *++YYCURSOR;
			switch (yych) {
			case ')':	goto yy201;
			case '.':	goto yy197;
			case '=':	goto yy203;
			case '}':	goto yy199;
			default:	goto yy41;
			}
yy50:
			yych = *++YYCURSOR;
			switch (yych) {
			case '<':	goto yy191;
			case '=':	goto yy193;
			default:	goto yy41;
			}
yy51:
			yych = *++YYCURSOR;
			switch (yych) {
			case '-':	goto yy179;
			case '=':	goto yy183;
			case '>':	goto yy181;
			default:	goto yy41;
			}
yy52:
			yych = *++YYCURSOR;
			switch (yych) {
			case '=':	goto yy177;
			case '|':	goto yy173;
			case '~':	goto yy175;
			default:	goto yy41;
			}
yy53:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':	goto yy171;
			default:	goto yy99;
			}
yy54:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':	goto yy169;
			default:	goto yy99;
			}
yy55:
			yyaccept = 2;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case '_':	goto yy163;
			case '|':	goto yy164;
			default:	goto yy56;
			}
yy56:
#line 225 "src/scanner.re"
			{ SYM(SYM_sub) }
#line 560 "<stdout>"
yy57:
			yyaccept = 3;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case '-':	goto yy148;
			case '=':	goto yy154;
			case '_':	goto yy151;
			case '|':	goto yy152;
			case '~':	goto yy149;
			default:	goto yy58;
			}
yy58:
#line 133 "src/scanner.re"
			{ SYM(SYM_pipe) }
#line 575 "<stdout>"
yy59:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case ':':	goto yy146;
			default:	goto yy60;
			}
yy60:
#line 127 "src/scanner.re"
			{ SYM(SYM_lparen) }
#line 585 "<stdout>"
yy61:
			++YYCURSOR;
#line 128 "src/scanner.re"
			{ SYM(SYM_rparen) }
#line 590 "<stdout>"
yy63:
			++YYCURSOR;
#line 129 "src/scanner.re"
			{ SYM(SYM_lbracket) }
#line 595 "<stdout>"
yy65:
			++YYCURSOR;
#line 130 "src/scanner.re"
			{ SYM(SYM_rbracket) }
#line 600 "<stdout>"
yy67:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case ':':	goto yy144;
			default:	goto yy68;
			}
yy68:
#line 131 "src/scanner.re"
			{ SYM(SYM_lcurly) }
#line 610 "<stdout>"
yy69:
			++YYCURSOR;
#line 132 "src/scanner.re"
			{ SYM(SYM_rcurly) }
#line 615 "<stdout>"
yy71:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case '.':	goto yy141;
			default:	goto yy41;
			}
yy72:
			++YYCURSOR;
#line 154 "src/scanner.re"
			{ SYM(SYM_therefore) }
#line 627 "<stdout>"
yy74:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'q':	goto yy132;
			case 'u':	goto yy133;
			default:	goto yy99;
			}
yy75:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'C':	goto yy130;
			default:	goto yy99;
			}
yy76:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'N':	goto yy128;
			default:	goto yy99;
			}
yy77:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'Q':	goto yy126;
			default:	goto yy99;
			}
yy78:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'R':	goto yy124;
			default:	goto yy99;
			}
yy79:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'Z':	goto yy122;
			default:	goto yy99;
			}
yy80:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 's':
			case 't':
			case 'u':
